[gd_scene load_steps=8 format=3 uid="uid://ddylw5u1blx1u"]

[ext_resource type="Script" path="res://Scripts/TitleScreen.gd" id="1_et1d5"]
[ext_resource type="Texture2D" uid="uid://c2yr1uhybn854" path="res://Shaders and Images/1 - title_screen.png" id="2_2wmku"]
[ext_resource type="AudioStream" uid="uid://fjamh15mhjki" path="res://Audio/Cherry_Street_Family_Dentistry.ogg" id="3_qnejt"]

[sub_resource type="Animation" id="Animation_0ylvx"]
resource_name = "Fade_in"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_06hyu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_n2hd3"]
resource_name = "fade_out"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_eaqiw"]
_data = {
"Fade_in": SubResource("Animation_0ylvx"),
"RESET": SubResource("Animation_06hyu"),
"fade_out": SubResource("Animation_n2hd3")
}

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -663.0
offset_bottom = -282.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_et1d5")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(577, 323.5)
scale = Vector2(2.24609, 1.00781)
texture = ExtResource("2_2wmku")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -21.0
offset_top = -8.0
offset_right = 1188.0
offset_bottom = 659.0
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_eaqiw")
}

[node name="Timer" type="Timer" parent="."]
wait_time = 2.694
one_shot = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 2.915

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_qnejt")

[node name="Timer3" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
[connection signal="timeout" from="Timer3" to="." method="_on_timer_3_timeout"]
